Updated the stylings, fixed issue causing it not to work on firefox

--- a/web/css/themes/prettify.css
+++ b/web/css/themes/prettify.css
@@ -6,6 +6,8 @@
   font-size: 12px;
   line-height: 1.5;
   border: 1px solid #ccc;
+  width: 100%;
+  margin:0;
   padding: 10px;
 }
 
